--- a/lib/stb.cbp
+++ b/lib/stb.cbp
@@ -29,10 +29,9 @@
 			<Add option="/DMINIZ_NO_ZLIB_COMPATIBLE_NAMES" />
 			<Add directory="src" />
 		</Compiler>
-		<Unit filename="src/c libs.c">
+		<Unit filename="src/main.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="src/cpp libs.cpp" />
 		<Unit filename="src/miniz.c">
 			<Option compilerVar="CC" />
 		</Unit>
