--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: [ x86, x64 ]
-        os: [ ubuntu-20.04, windows-latest ]
-        exclude:
+        include:
           - arch: x86
+            dub_arch: x86
+            os: windows-latest
+
+          - arch: x64
+            dub_arch: x86_64
+            os: windows-latest
+
+          - arch: x64
+            dub_arch: x86_64
             os: ubuntu-20.04
 
     runs-on: ${{ matrix.os }}
@@ -30,4 +37,4 @@ jobs:
           compiler: ldc-latest
 
       - run: |
-          dub test -b unittest
+          dub test -b unittest -a ${{ matrix.dub_arch }}
