--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,3 +57,24 @@ jobs:
 
       - run: |
           dub test -b unittest -a ${{ matrix.dub_arch }}
+
+  release:
+    runs-on: ubuntu-20.04
+    needs: [ build ]
+    if: "!contains(github.event.head_commit.message, 'WIP')"
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: anothrNick/github-tag-action@1.35.0
+        id: create_tag
+        env:
+          WITH_V: true
+          DEFAULT_BUMP: patch
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ steps.create_tag.outputs.new_tag }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
